# bocagrande

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_fix.py
adapter/: contract_loader.py  (+6 more)
inspiracion/panda-etl/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
inspiracion/panda-etl/backend/app/: config.py  logger.py  main.py  startup.py
inspiracion/panda-etl/backend/app/adapters/: __init__.py  celery_task_queue_adapter.py  chroma_vector_store_adapter.py  file_system_pipeline_definition_store_adapter.py  groq_llm_adapter.py  local_file_storage_adapter.py  process_scheduler_adapter.py  universal_io.py
inspiracion/panda-etl/backend/app/api/: dependencies.py
inspiracion/panda-etl/backend/app/connectors/: db_connector.py  file_handler.py
inspiracion/panda-etl/backend/app/core/: celery_app.py
inspiracion/panda-etl/backend/app/database/: session.py
inspiracion/panda-etl/backend/app/docs/: swagger.yaml
inspiracion/panda-etl/backend/app/interfaces/: __init__.py  asset_content_repository.py  auth_service.py  file_storage_port.py  llm_service_port.py  pipeline_definition_store_port.py  process_repository.py  process_scheduler_port.py  repositories.py  task_queue_port.py  vector_store_port.py
inspiracion/panda-etl/backend/app/models/: __init__.py  app_setting.py
inspiracion/panda-etl/backend/app/pentaho_importer/: __init__.py  kjb_parser_service.py  ktr_parser_service.py  schemas.py  transformation_model.py
inspiracion/panda-etl/backend/app/processing/: README.md  data_format_handler.py  data_format_handler.py.DEPRECATED  pipeline_manager.py  pipeline_repository.py  pipeline_runner.py  process_queue.py  process_scheduler.py  schema_extractor.py
inspiracion/panda-etl/backend/app/repositories/: __init__.py  app_setting_repository.py  asset_content_repository.py  process_repository.py  project_repository.py  user_repository.py
inspiracion/panda-etl/backend/app/schemas/: __init__.py  asset.py  process.py  project.py  user.py
inspiracion/panda-etl/backend/app/services/: app_setting_service.py  google_auth_service.py  project_service.py
inspiracion/panda-etl/backend/tests/: conftest.py  test_app_startup.py
inspiracion/panda-etl/backend/tools/: ast_analyzer.py
(+142 files in other folders)
