[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Disable strict error codes to allow gradual typing
disable_error_code = "assignment,arg-type,misc,union-attr,import-untyped"

[project]
name = "bocagrande"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["bocagrande", "adapter", "ontology"]

[project.scripts]
bocagrande = "bocagrande.cli:main"
